fixed format and spacing of gallery title

--- a/style.css
+++ b/style.css
@@ -88,7 +88,9 @@ h6{
     text-align: left;
     color: #3E2C1C;
     font-size: 92px;
-    margin-left: 200px;
+    margin-left: 400px;
     margin-bottom: 10px;
-    margin-top: 0px;
+    margin-top: 120px;
+    width: 100px;
+    line-height: 60px;
 }
